--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>El operativo lo realizó el Comando de Funes este miércoles a la madrugada. Hasta entonces siguen en la Comisaría 23 a la espera de fiscalía para declarar.
     </h2>
     <p class="bajada">Matías Michel, considerado el rey de esta comida típica, compartió sus secretos en diálogo con <b>Cadena 3</b>.</p>    
-    <img src="https://infofunes.com.ar/uploads/Policia comisaria 23 (13).jpg" alt="Arrestan a cuatro personas con cocaína y marihuana, una menor entre ellos">
+    <img src="https://infofunes.com.ar/uploads/Policia comisaria 23 (13).jpg" alt="Arrestan a cuatro personas con cocaína y marihuana, una menor entre ellos" width="800" height="600">
 
     
     <p> Durante un recorrido de personal del Comando de Funes se pudo ver en la madrugada del miércoles que en la esquina de Catamarca y Leloir había cuatro personas en actitud sospechosa. 
@@ -24,6 +24,54 @@
     <picture class="imagen-notas" title="Matías Michel, ganador del cuarto concurso provincial de empanadas en Salta" data-src="https://images-tools.cadena3.com/tools/r/8013e4d2-7eba-4a2f-8f7d-3e007c0b9558.jpg?width=1200&amp;height=738" style="background-image: url(&quot;https://images-tools.cadena3.com/tools/r/8013e4d2-7eba-4a2f-8f7d-3e007c0b9558.jpg?width=1200&amp;height=738&quot;);"></picture>    <img src="una imagen" alt="una imagen">
 
     <audio src="link de un audio" autoplay></audio>
+
+
+    <form action="https://httpbin.org/post" method="post"   target="_blank">
+        <fieldset>
+            <legend>Formulario</legend>
+            <label for="name">Nombre
+                <input name="nombre" autocomplete="off">
+            </label>
+            <label for="name">Apellido
+                <input  name="apellido" autocomplete="off">
+            </label>
+            <label for=""></label>
+            <label for="name"> Correo
+                <input name="e-mail" autocomplete="off" id="name" type="email" required>
+            </label>
+
+
+            <fieldset>                      <!-- RadioButton -->
+                <legend>Sexo</legend>
+                <input value="Hombre" name="sexo" type="radio">Hombre
+                <input type="radio" name="sexo" value="Mujer">Mujer
+            </fieldset>
+
+            <div>               <!-- Combobox -->
+                <select size="3" name="Pais" id="" required>
+                    <option value="Argentina">Argentina</option>
+                    <option value="Francia">Francia</option>
+                    <option value="Uruguay">Uruguay</option>
+                    <option value="Chile">Chile</option>
+                    <option value="Venezuela">Venezuela</option>
+                    <option value="RD" selected>Republica Dominicana</option>
+                </select>
+            </div>
+
+            <div>
+                <textarea name="comentario">Escribime tu comentario</textarea>
+            </div>
+
+
+
+
+
+
+            <button>Continuar...</button>
+
+        </fieldset>
+
+
 
 </body>
 </html>
