practica de css

--- a/Clase_4/index.html
+++ b/Clase_4/index.html
@@ -16,7 +16,9 @@
             Rosario 3
         </a>
     </header>
-    <article class="article-noticias"
+    <article class="article-noticias">
+        articulo
+    </article>
     <style>
 
     </style>
