--- a/formulario.html
+++ b/formulario.html
@@ -110,10 +110,10 @@
   </div>
   
   <div class="form-row">
-    <button type="submit">Enviar</button>
+    <button type="submit" id="BtnEnviar">Enviar</button>
     
     <a href="index.html">
-      <button type="button">Volver</button></a>
+      <button type="button" >Volver</button></a>
   </div>
 </form>
 
