Pagina de la noticia finalizada. Con modal al completar el form

--- a/formulario.html
+++ b/formulario.html
@@ -122,6 +122,16 @@
   </div>
 </main>
 
+<!--Modal-->
+<section class="modal">
+  <div class="modal_container">
+    <h2 class="modal_titulo">Gracias por completar tus datos!</h2>
+    <p class="modal_parrafo"></p>
+    <a href="#" class="modal_cerrar"><button>Cerrar</button></a>
+  </div>
+</section>
+
+
 <!-- FOOTER -->
 <footer class="footer-bottom-section">
   <div class="container footer-container">
